--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".PasswordActivity" />
         <activity android:name=".AddMemory" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".PasswordNewFirst">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
