--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".PasswordActivity" />
+        <activity android:name=".PasswordNewFirst" />
         <activity android:name=".AddMemory" />
-        <activity android:name=".PasswordNewFirst">
+        <activity android:name=".PasswordActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
